# ST7365P-lcd-rs

./: .gitignore  Cargo.toml  README.md
examples/picocalc-rp2350/: Cargo.toml
examples/picocalc-rp2350/src/: main.rs
src/: instruction.rs  lib.rs
