[package]
name = "st7365p-lcd"
description = "ST7365P TFT LCD driver with embedded-graphics support"
version = "0.11.0"
authors = [
  "Paul Sajna <sajattack@gmail.com>",
  "Sawyer Bristol <SawyerBristol@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/legitcamper/st7365p-lcd-rs"
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1.0"

[dependencies.embedded-graphics-core]
version = "0.4"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]
