[package]
name = "picocalc-rp2350"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-interrupt",
  "executor-thread",
  "nightly",
] }
embassy-rp = { version = "0.4.0", features = [
  "rp235xb",
  "critical-section-impl",
  "unstable-pac",
  "time-driver",
  "binary-info",
] }
embassy-futures = "0.1.1"
embassy-time = "0.4.0"
embassy-embedded-hal = "0.3.0"
embassy-sync = { version = "0.7" }
trouble-host = { version = "0.1", features = [
  "derive",
  "scan",
], optional = true }

embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0"
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
panic-probe = "0.3"
portable-atomic = { version = "1.11", features = ["critical-section"] }

defmt = { version = "0.3", optional = true }
defmt-rtt = "0.4.2"

embedded-graphics = { version = "0.8.1" }
embedded-sdmmc = { git = "https://github.com/Be-ing/embedded-sdmmc-rs", branch = "bisync", default-features = false }
st7365p-lcd = { path = "../../" }
tinybmp = "0.6.0"
